# nebius-physical-ai

./: .cursorignore  .cursorrules  .gitignore  .gitleaks.toml  .phone-agent-pr-test  .queue-validation-0def675b.md  .queue-validation-2e3a7ac.md  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  DEVELOPMENT.md  FIXME.md  FTUE-AUDIT.md  Makefile  README.md  SECURITY.md  demo-script-final.md  trivy.yaml  two_vm.md
npa/: .dockerignore  README.md  agent.md  benchmark_b300_h200.sh  pyproject.toml  requirements-lock.txt
npa/demo/: demo.sh  generate_observation.py
npa/deploy/: env.template  install.sh  npa-lerobot-server.service
npa/docker/: check_tag_consistency.py  tags.yaml
npa/docker/cosmos/: Dockerfile  smoke_env.py
npa/docker/detection-training/: Dockerfile
npa/docker/fiftyone/: Dockerfile  smoke_env.py
npa/docker/genesis/: Dockerfile  smoke_env.py  smoke_functional.py
npa/docker/groot/: Dockerfile  README.md  build.sh  smoke_env.py
npa/docker/isaac-lab/: Dockerfile
npa/docker/lancedb/: Dockerfile  entrypoint.sh  requirements.txt
npa/docker/lerobot/: Dockerfile  Dockerfile.b300  build.sh  run_smoke.sh
npa/docker/sonic/: Dockerfile  entrypoint.sh  requirements.txt
npa/docker/workbench/: check_tag_consistency.py  packaging-contract.yaml  sim2real-build.sh  sm120-images.json  tags.yaml
npa/docs/: dev-vm-testing.md
npa/docs/architecture/: byo-robot-task-registration.md  custom-asset-test-results.md  robot-onboarding.md
npa/examples/: isaac_franka_token_factory_reason.py
npa/manifests/: demo-8gpu-h200.yaml
npa/runs/demo-prestage/: npa-cli-demo-prestage-fix-prompts-20260509.md
npa/scripts/: agent_fresh_setup_loop.sh  agent_mature_verify_loop.sh  audit_workbench_image_tags.py  build_golden_eval_images.sh  capture_isaac_lab_scene_frames.py  check_workflow_images.py  dev_vm_isolated_session.sh  generate_bdd100k_pipeline.py  genesis_diagnostic.py  golden_eval_autofix.sh  golden_eval_build_loop.sh  golden_eval_converge.sh  golden_eval_cursor_patch.sh  golden_eval_watchdog.sh  nebius_registry_docker_login.sh  npa-workflow-yaml-loop.sh  run_agent_cypress.sh  run_bdd100k_pipeline.py  run_byof_container_verify.py  run_byof_datagen.py  run_byof_repo.py  run_golden_evals.py  run_isaac_lab_byof_repo.py  run_isaac_lab_rl.py  run_sim2real_cluster_loop.sh  run_sim2real_overnight.sh  run_sim_to_real_controller.py  run_sim_to_real_loop.py  run_sim_to_real_pipeline.py  run_sim_to_real_quickstart.py  run_tokenfactory_sim_sweep.py  run_tokenfactory_train_triage.py  start_agent_live_tmux.sh  start_golden_evals_converge_tmux.sh  start_golden_evals_tmux.sh  start_pipeline_images_e2e_tmux.sh  verify_agent_artifact_discovery_live.sh  verify_agent_chat_viz.sh  verify_agent_franka.sh  verify_agent_rerun_bundle.sh  (+1 more)
npa/src/npa/: __init__.py  _sdk.py  agent_rerun_bundle_check.py  errors.py  fiftyone_lerobot.py  provisioning.py
npa/tests/: conftest.py  fakes.py  test_adapter.py  test_byovm.py  test_clients.py  test_config.py  test_convert_lerobot_to_mp4.py  test_credential_fallback.py  test_credentials.py  test_cross_project_cli_behavior.py  test_cross_project_credentials.py  test_cross_project_integration_scaffold.py  test_demo_stage.py  test_deploy.py  test_deploy_cleanup.py  test_deploy_confirm.py  test_deploy_images.py  test_deploy_safety.py  test_e2e_conftest.py  test_endpoint.py  test_env.py  test_fiftyone_lerobot.py  test_genesis.py  test_groot_adapter.py  test_groot_predictions_to_rerun_adapter.py  test_huggingface.py  test_internal_sdk.py  test_isaac_lab_lerobot.py  test_lancedb_bdd100k_backfill.py  test_lancedb_bdd100k_import.py  test_lancedb_bdd100k_mv.py  test_lerobot.py  test_lerobot_to_rerun_adapter.py  test_lerobot_version_compat.py  test_project_credentials.py  test_provisioning.py  test_rerun_host.py  test_rerun_share.py  test_robot_assets.py  test_scene_assets.py  (+9 more)
npa/tests/agent_eval/: .gitignore  __init__.py  adversarial.py  adversarial_baseline.json  harness.py  scenarios.py  test_agent_adversarial_scorecard.py  test_agent_eval_scorecard.py
npa/tests/browser/: .gitignore  cypress.config.cjs  package-lock.json  package.json
npa/tests/burst/: test_core.py
npa/tests/cli/: test_adapter_cli.py  test_agent.py  test_agent_actions.py  test_agent_backend_render.py  test_agent_capability_parity.py  test_agent_chat.py  test_agent_chat_queue.py  test_agent_media_preview.py  test_agent_memory.py  test_agent_recordings.py  test_agent_rerun_bundle_check.py  test_agent_rerun_no_bundle_splash.py  test_agent_retrieval.py  test_agent_routing.py  test_agent_rrd_proxy.py  test_agent_runs_consolidated.py  test_agent_semantic_router.py  test_agent_sim2real_loop.py  test_agent_stages.py  test_agent_stages_run_picker.py  test_agent_trace.py  test_agent_visual_feedback.py  test_agent_workflow.py  test_byof_cli.py  test_cleanup_partial_cli.py  test_convert_cli.py  test_cosmos3_cli.py  test_cosmos_cli.py  test_cosmos_infer_upload_errors.py  test_dataset_cli.py  test_deploy_ingress_cli.py  test_detection_training_cli_coverage.py  test_doctor_cli.py  test_error_formatting.py  test_fiftyone_cli.py  test_fiftyone_curate.py  test_fiftyone_eval.py  test_foxglove_cli.py  test_generate_docs_index.py  test_genesis_cli.py  (+36 more)
npa/tests/clients/: test_kube.py  test_serverless.py  test_token_factory.py
npa/tests/composition/: test_curate_augment_train_e2e.py  test_curate_augment_train_workflow.py  test_sim_to_real_e2e.py
npa/tests/docker/: test_packaging_contract.py
npa/tests/e2e/: _serverless_fallback.py  _serverless_images.py  agent_live_helpers.py  conftest.py  npa_workflow_live_helpers.py  test_adapter_e2e.sh  test_agent_live.py  test_burst_live_e2e.py  test_byof_onboarding_live_e2e.py  test_byovm_endpoint_self_heal_e2e.py  test_configure_bucket_e2e.py  test_cosmos3_inference_raw_sky_e2e.py  test_cosmos_e2e.py  test_cosmos_e2e.sh  test_cosmos_jobs_serverless_e2e.py  test_cosmos_serverless_e2e.py  test_demo_stage_e2e.py  test_distill_pipeline_e2e.sh  test_fiftyone_e2e.py  test_genesis_e2e.py  test_genesis_e2e.sh  test_groot_e2e.py  (+20 more)
npa/workflows/: README.md
(+1169 files in other folders)
