[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npa"
version = "0.1.0"
description = "Nebius Physical AI platform CLI/SDK"
requires-python = ">=3.10"
dependencies = [
    "typer~=0.24.1",
    "httpx~=0.28.1",
    "paramiko~=4.0.0",
    "pyyaml~=6.0.3",
    "rich~=15.0.0",
    "boto3~=1.42.91",
    "jinja2~=3.1.6",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pillow>=10.0",
    "scipy>=1.10",
    "lancedb==0.30.2",
    "rerun-sdk==0.31.4",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
# SkyPilot is installed in an isolated venv outside NPA's package environment; see docs/orchestration/skypilot-setup.md.
orchestration = []
server = ["fastapi~=0.136.1"]
genesis = [
    "genesis-world",
    "rsl-rl-lib==2.2.4",
    "torch>=2.0",
    "torchvision>=0.15",
    "tensorboard>=2.14",
    "numpy>=1.24",
    "pyarrow>=14.0",
]
adapter = [
    "numpy>=1.24",
    "pyarrow>=14.0",
]
groot = [
    "nvidia-gr00t-sdk==0.1.0",
]
sonic = [
    "torch>=2.0",
    "onnx>=1.16",
    "onnxscript>=0.5",
    "onnxruntime>=1.18",
]
# Development and test tooling. Install with: pip install -e "npa[dev]"
# Includes the server extra so the standard (non-e2e) test suite collects
# without pulling in GPU-heavy extras (genesis, groot, sonic).
dev = [
    "npa[server]",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "fastapi~=0.136.1",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4.0",
]

[project.scripts]
npa = "npa.cli.main:app_entry"

[tool.npa.supported-tools]
lerobot = "0.5.1"
lerobot-policy = "0.1.1"
genesis = "0.4.6"
isaac-lab = "2.3.2.post1"
cosmos = "1.0.9"
cosmos2-transfer = "2.5.1-golden-eval-smoke-20260616T033000Z"
cosmos3-reason = "3.0.1-genuine-sm120"
groot = "0.1.0"
fiftyone = "1.15.0"
sonic = "0.1.2"
retargeting = "0.1.1"
envgen = "0.1.2"
reference-policy = "0.1.2"
lerobot-vlm-rl = "0.1.1"
# 0.1.2-genuine-sm120 lost working Blackwell (sm_120) Genesis kernels and crashes
# heldout_eval on RTX PRO 6000 ("CUDA error: no kernel image available"); 0.1.1 is
# the proven-good build. Re-bump only after a 0.1.3 rebuild restores sm_120 kernels.
loop-eval = "0.1.1-genuine-sm120"
rerun-viewer = "0.31.4"
lancedb = "0.30.3"
detection-training = "bdd100k-golden-eval-smoke-20260614T210000Z"
nebius-cli = "0.12.192"
terraform = "~> 0.5.201"
terraform-cli = "1.13.3"

[tool.hatch.build.targets.wheel]
packages = ["src/npa"]

[tool.hatch.build.targets.wheel.force-include]
"src/npa/solutions/solutions.toml" = "npa/solutions/solutions.toml"
"src/npa/deploy/sonic_image_manifest.json" = "npa/deploy/sonic_image_manifest.json"
"src/npa/smoke/golden_evals.yaml" = "npa/smoke/golden_evals.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests requiring real Nebius infrastructure (gated on NPA_INTEGRATION_E2E env var).",
    "e2e_serverless: serverless endpoint e2e tests requiring real Nebius Serverless AI infrastructure.",
    "e2e_skypilot: SkyPilot e2e tests requiring Nebius, MK8s, and SkyPilot-managed jobs.",
    "e2e_pipeline: pipeline composition e2e tests that submit multiple real Nebius Serverless AI Jobs.",
    "smoke: smoke tests that exercise CLI subprocess paths with local fakes.",
    "multi_gpu: BYOVM multi-GPU tests that require NPA_TEST_BYOVM_* env vars and a live multi-GPU VM.",
    "ngc_e2e: GR00T NGC credential e2e tests that require NPA_TEST_GROOT_NGC_E2E=1 and a live GR00T workbench.",
    "byovm_live: BYOVM tests that require opt-in live target environment variables.",
    "gpu: tests that provision a live GPU through SkyPilot when credentials are available.",
    "token_factory_e2e: live Nebius Token Factory API tests that require a real NEBIUS_TOKEN_FACTORY_KEY.",
    "agent_live: live NPA agent VM HTTPS tests gated on NPA_AGENT_LIVE=1 and NPA_INTEGRATION_E2E=1.",
]
