[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npa"
version = "0.1.0"
description = "Nebius Physical AI platform CLI/SDK"
requires-python = ">=3.10"
# Core keeps only what `import npa.cli.main` needs so the offline paths
# (`npa --version`, vlm-eval stub, workflow validate/plan) install fast on a
# clean index. Heavy or tool-specific packages live in extras; lower bounds are
# deliberately wide so a stale mirror does not break the first install.
dependencies = [
    "typer>=0.24",
    # Imported directly (npa.cli.workflow_shim); typer >= 0.27 no longer
    # depends on click, so it must be declared here.
    "click>=8.0",
    "httpx>=0.27",
    "paramiko>=4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "boto3>=1.34",
    "jinja2>=3.1",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pillow>=10.0",
    "pydantic>=2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
# SkyPilot is installed in an isolated venv outside NPA's package environment; see docs/orchestration/skypilot-setup.md.
orchestration = []
# Dataframe/plotting helpers used by curation, benchmarks, and reports.
data = [
    "pandas>=2.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "scipy>=1.10",
]
# LanceDB workbench tool (local server, BDD100K import, materialized views).
lancedb = [
    "lancedb==0.30.2",
    "pandas>=2.0",
]
# Rerun viewer/recording integration (`npa rerun`, sim-viz adapters).
viz = ["rerun-sdk==0.31.4"]
# Everything the previous monolithic install provided, minus GPU extras.
full = ["npa[data,lancedb,viz,server]"]
server = ["fastapi~=0.136.1"]
genesis = [
    "genesis-world",
    "rsl-rl-lib==2.2.4",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tensorboard>=2.14",
    "numpy>=1.24",
    "pyarrow>=14.0",
]
adapter = [
    "numpy>=1.24",
    "pyarrow>=14.0",
]
groot = [
    "nvidia-gr00t-sdk==0.1.0",
]
sonic = [
    "torch>=2.12.1",
    "onnx>=1.16",
    "onnxscript>=0.5",
    "onnxruntime>=1.18",
]
# Development and test tooling. Install with: pip install -e "npa[dev]"
# Includes the full extra so the standard (non-e2e) test suite collects
# without pulling in GPU-heavy extras (genesis, groot, sonic).
dev = [
    "npa[full]",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "fastapi~=0.136.1",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4.0",
]

[project.scripts]
npa = "npa.cli.main:app_entry"

[tool.npa.supported-tools]
# Default LeRobot pin. Additional supported tags live in
# npa/src/npa/deploy/lerobot_version_manifest.json (currently 0.5.1 + 0.6.0).
lerobot = "0.5.1"
lerobot-policy = "0.1.1"
genesis = "0.4.6"
isaac-lab = "2.3.2.post1"
cosmos = "1.0.9"
cosmos2-transfer = "2.5.1-golden-eval-smoke-20260616T033000Z"
cosmos3-reason = "3.0.1-genuine-sm120"
groot = "0.1.0"
fiftyone = "1.15.0"
sonic = "0.1.2"
retargeting = "0.1.1"
envgen = "0.1.2"
reference-policy = "0.1.2"
lerobot-vlm-rl = "0.1.1"
# 0.1.3-genuine-sm120: rebuilt+pushed 2026-07-21 from npa-genesis 0.4.6-sm120
# (torch 2.9.0+cu130; _cuda_getArchFlags reports sm_120/compute_120). Supersedes
# 0.1.1-genuine-sm120 (sm_90-capped torch, crashed on RTX PRO 6000) and
# 0.1.2-genuine-sm120 (never pushed). Validated end-to-end on RTX PRO 6000
# (sm_120) 2026-07-21; 0.1.1 deleted from the registry. See FIXME.md.
loop-eval = "0.1.3-genuine-sm120"
rerun-viewer = "0.31.4"
# Lichtblick (MPL-2.0): OSS, Foxglove-compatible static web viewer bundle tag.
lichtblick = "1.26.0"
lancedb = "0.30.3"
detection-training = "bdd100k-golden-eval-smoke-20260614T210000Z"
nebius-cli = "0.12.192"
terraform = "~> 0.5.201"
terraform-cli = "1.13.3"

[tool.hatch.build.targets.wheel]
packages = ["src/npa"]

[tool.hatch.build.targets.wheel.force-include]
"src/npa/solutions/solutions.toml" = "npa/solutions/solutions.toml"
"src/npa/deploy/sonic_image_manifest.json" = "npa/deploy/sonic_image_manifest.json"
"src/npa/deploy/lerobot_version_manifest.json" = "npa/deploy/lerobot_version_manifest.json"
"src/npa/smoke/golden_evals.yaml" = "npa/smoke/golden_evals.yaml"
"src/npa/cli/agent_ui.html" = "npa/cli/agent_ui.html"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# Pyflakes + the default pycodestyle errors. The tree is clean under this set
# and CI enforces it (.github/workflows/lint.yml); widen deliberately, not by
# accident.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests requiring real Nebius infrastructure (gated on NPA_INTEGRATION_E2E env var).",
    "e2e_serverless: serverless endpoint e2e tests requiring real Nebius Serverless AI infrastructure.",
    "e2e_skypilot: SkyPilot e2e tests requiring Nebius, MK8s, and SkyPilot-managed jobs.",
    "e2e_pipeline: pipeline composition e2e tests that submit multiple real Nebius Serverless AI Jobs.",
    "smoke: smoke tests that exercise CLI subprocess paths with local fakes.",
    "multi_gpu: BYOVM multi-GPU tests that require NPA_TEST_BYOVM_* env vars and a live multi-GPU VM.",
    "ngc_e2e: GR00T NGC credential e2e tests that require NPA_TEST_GROOT_NGC_E2E=1 and a live GR00T workbench.",
    "byovm_live: BYOVM tests that require opt-in live target environment variables.",
    "gpu: tests that provision a live GPU through SkyPilot when credentials are available.",
    "token_factory_e2e: live Nebius Token Factory API tests that require a real NEBIUS_TOKEN_FACTORY_KEY.",
    "agent_live: live NPA agent VM HTTPS tests gated on NPA_AGENT_LIVE=1 and NPA_INTEGRATION_E2E=1.",
]
